// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`InlineLinkContainer external link accessibility should be explicitly marked "external" for screen reader users & localised 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c0:focus,
.c0:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<a
  aria-label="این لینک هست، لینک خارجی"
  class="c0"
  href="https://www.example.com/"
>
  این لینک هست
</a>
`;

exports[`InlineLinkContainer external link accessibility should be explicitly marked "external" for screen reader users 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c0:focus,
.c0:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<a
  aria-label="This is a link, external"
  class="c0"
  href="https://www.example.com/"
>
  This is a link
</a>
`;

exports[`InlineLinkContainer internal link not matching SPA route should render correctly 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c0:focus,
.c0:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<a
  class="c0"
  href="https://www.bbc.com/news"
>
  <b>
    This is bold text for a link
  </b>
</a>
`;

exports[`InlineLinkContainer link matching routes for SPA should render correctly 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c0:focus,
.c0:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<a
  class="-Link c0"
  href="/news/articles/c0g992jmmkko"
>
  This is text for an internal link
</a>
`;

exports[`InlineLinkContainer link matching routes for SPA should render correctly for TEST environment 1`] = `
.c0 {
  color: #222222;
  border-bottom: 1px solid #B80000;
  -webkit-text-decoration: none;
  text-decoration: none;
}

.c0:visited {
  color: #6E6E73;
  border-bottom: 1px solid #6E6E73;
}

.c0:focus,
.c0:hover {
  border-bottom: 2px solid #B80000;
  color: #B80000;
}

<a
  class="-Link c0"
  href="/news/articles/c0g992jmmkko"
>
  This is text for an internal link
</a>
`;
